docs: fix spacing issues

--- a/docs/.vuepress/theme/assets/less/dialtone-docs.less
+++ b/docs/.vuepress/theme/assets/less/dialtone-docs.less
@@ -140,7 +140,8 @@ a.router-link-active {
 //      appropriate to ship as part of Dialtone.
 //  ----------------------------------------------------------------------------
 .main-content {
-  max-width: 99rem;
+  width: 99rem;
+  max-width: calc(100% - var(--size216)); // 100% max width - page-toc width
   margin: 0 auto;
   padding: 2.4rem 2.5rem;
 }
